DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Feb-13-2010 patrick     Fixed mouse lock state tracking in input areas. The
                        pure virtual methods in gadget::InputArea are now
                        named lockMouseInternal() and unlockMouseInternal().
                        NEW VERSION: 1.3.27
Feb-08-2010 patrick     Changed gadget::Event::getSource() to return a
                        reference instead of a pointer. Added a non-const
                        overload of same.
                        NEW VERSION: 1.3.26
Jan-02-2010 patrick     Added public virtual methods
                        gadget::InputArea::lockMouse() and
                        gadget::InputArea::unlockMouse() so that code that gets
                        a gadget::InputArea reference can programatically lock
                        and unlock the mouse pointer.
                        NEW VERSION: 1.3.25
Oct-17-2009 patrick     Added consumed state tracking to gadget::Event.
                        NEW VERSION: 1.3.24
Jul-31-2009 patrick     The gadget::InputArea creating a gadget::Event is now
                        associated with the created gadget::Event object.
                        NEW VERSION: 1.3.23
Apr-19-2009 patrick     Added handling of mouse scroll events in the X and Y
                        axes as first class mouse events. For the old behavior
                        of treating them as button presses, recognizing left
                        and right scrolling has been added.
                        NEW VERSION: 1.3.22
Mar-24-2009 patrick     Allow mouse locking in keyboard/mouse input areas to be
		        disabled through the configuration.
                        NEW VERSION: 1.3.21
Apr-18-2008 patrick     Added gadget::FullPositionXformFilter.
                        NEW VERSION: 1.3.20
Feb-25-2008 dshipton    Refactored cluster networking to eliminate cosstly