@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Mar-25-2010 patrick     Changed window/mouse interaction on Windows.
+                        NEW VERSION: 1.3.28
 Feb-13-2010 patrick     Fixed mouse lock state tracking in input areas. The
                         pure virtual methods in gadget::InputArea are now
                         named lockMouseInternal() and unlockMouseInternal().
